added gameBoard module and displaying board on page with function in the gameBoard module.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,21 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
-    
+    <div class="container">
+        <header>
+            <h1>Lets Play TIC TAC TOE!</h1>
+        </header>
+
+        <main> 
+            <div class="game-board">
+                
+            </div>
+        </main>
+
+        <footer>
+            <p>Created by Joshua Holtsclaw</p>
+        </footer>
+    </div>
 
     <script src="scripts.js"></script>
 </body>
