added turn counter, displaying text for each player win and tie.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
+
+    <div class="end-game-screen"></div>
     <div class="container">
         <header>
             <h1>Lets Play TIC TAC TOE!</h1>
+            <p class="turn-counter">Turn: 0</p>
         </header>
 
         <main> 
