progress on restart event

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <div class="end-game-screen"></div>
+    <div class="end-game-screen"><button class="restart-button">Restart?</button></div>
     <div class="container">
         <header>
             <h1>Lets Play TIC TAC TOE!</h1>
