--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
 
-    <div class="end-game-screen end-game-screen-hidden"><button class="restart-button">Restart?</button></div>
+    <div class="end-game-screen end-game-screen-hidden">
+        <button class="restart-button">Restart?</button>
+    </div>
     <div class="container">
         <header>
             <h1>Lets Play TIC TAC TOE!</h1>
