adding home screen with game style buttons. adding input on home screen for player One/Two names. file structure changes for 1v1 and 1vai game

--- a/oneVone.html
+++ b/oneVone.html
@@ -15,20 +15,21 @@
     <div class="container">
         <header>
             <h1>Lets Play TIC TAC TOE!</h1>
-            
+            <span>1 v ai</span>
+            <p class="turn-counter">Turn: 0</p>
         </header>
 
         <main> 
-            <input type="text" class="nameOne">
-            <a href="./oneVone.html">1 v 1</a>
-            <a href="./oneVai.html">1 v ai</a>
+            <div class="game-board">
+                
+            </div>
         </main>
 
         <footer>
             <p>Created by Joshua Holtsclaw</p>
         </footer>
     </div>
-
     <script src="scripts.js"></script>
+    <script src="scriptOneVOne.js"></script>
 </body>
 </html>
