--- a/oneVone.html
+++ b/oneVone.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="gameStyles.css">
     <title>Tic Tac Toe</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
     <div class="container">
         <header>
             <h1>Lets Play TIC TAC TOE!</h1>
-            <span>1 v ai</span>
+            <span>1 v 1</span>
             <p class="turn-counter">Turn: 0</p>
         </header>
 
@@ -29,7 +29,6 @@
             <p>Created by Joshua Holtsclaw</p>
         </footer>
     </div>
-    <script src="scripts.js"></script>
     <script src="scriptOneVOne.js"></script>
 </body>
 </html>
