fixed file structure

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             </div>
             
             <div class="game-types">
-                <a class="game-type-button" href="./oneVone.html">1 v 1</a>
-                <a class="game-type-button" href="./oneVai.html">1 v AI</a>
+                <a class="game-type-button" href="./pages/oneVone.html">1 v 1</a>
+                <a class="game-type-button" href="./pages/oneVai.html">1 v AI</a>
             </div>
             
         </main>
